2007-02-10 CTAF <>
	* bin : moved each unusefull bin to bin/misc
	* globalenv : remove LASH_START_SERVER, not needed and buggy

2007-02-09 CTAF <>
	* alias : new alias using color: gmake, make
	* alias : new "default" alias: (svn|cvs|make|gmake)_real
	* emacs : press home and end more than once, then you will see :-)

2007-02-08 CTAF <>
	* emacs : commited a fix for qt c++
	* emacs : huge speed up at startup time
	* emacs : new file: emacs.config that contains global configuration
	* emacs : cleanup, remove some files
	* emacs : never display menu-bar on windows
	* xsession : make it portable using /usr/bin/env bash
	* color*.pl : use /usr/bin/env perl to be more portable

2007-02-06 CTAF <>
	* emacs : removed zone mode (you already miss me)
	* emacs : improved load time
	* ctafconf : no more ctafconf_config
	* ctafconf : no more ctafconf_sudo
	* colorsvn : yalla!
	* colorcvs : olle!!
	* emacs : bug with gdb-ui
	* emacs : cua everywhere

2007-02-05 CTAF <>
	* colormake : handle fucking libtool
	* chownr : chown recursif

2007-02-04 CTAF <>
	* shell : include colormake, binding for m,ma,etc.. use it :-)
	* ctafconf : ctafconf-install works !! (no more bug with ask, nor with choice)
	* ssft : bug with read
	* emacs : fixed a bug, emacs start faster

2006-17-06 CTAF <>
	* alias : svndiff (svn diff without whitespace, tab, and blankline differences)

2006-05-30 CTAF <>
	* emacs : remove some bug in prog.emacs, mode.emacs and misc.emacs

2006-05-29 CTAF <>
	* emacs : M-x => browse-kill-ring
	* emacs : use generic, generic-x for unix configuration file
	* emacs : support flymake in makefile template

2006-05-21 CTAF <> -- 0.3.1
	* xsession : remove wm changing, not complete enought
	* emacs : icicle => M-x, C-x f, ...
	* emacs : include gdb-ui for a better debugging experience
	* emacs : pc-keys: better home and end keybindings

2006-05-20 CTAF <>
	* xsession : support kdeinit
	* xsession : stability improvement
	* emacs : indicate buffer boundary on the left fringe